--- a/sass/main.sass
+++ b/sass/main.sass
@@ -235,6 +235,120 @@ body
 		line-height: 29px
 		text-indent: -8px
 
+// services ///////////////////////////////////////////////////////////////////////////////////////////////////
+
+.services
+	padding: 100px 0 70px 0
+	&-wrapper
+		display: flex
+		flex-direction: column
+		align-items: center
+
+	&-title
+		font-weight: bold
+		font-size: 36px
+		line-height: 44px
+		margin: 0 0 58px 0
+	&-content
+		display: flex
+		align-items: flex-start
+		justify-content: flex-start
+		flex-wrap: wrap
+	&-item
+		display: flex
+		flex-direction: column
+		width: 294px
+		min-height: 440px
+		color: #fff
+		cursor: pointer
+		&:not(:last-child)
+			margin: 0 129px 0 0
+		&:hover	&__hidden-text
+			top: 0
+			opacity: 1
+			filter: blur(0)
+		&__info
+			position: relative
+			display: flex
+			align-items: flex-start
+			justify-content: flex-start
+			width: 100%
+			min-height: 383px
+			padding: 20px 22px
+			overflow: hidden
+			&::before
+				content: ''
+				position: absolute
+				width: 100%
+				height: 100px
+				top: 0
+				left: 0
+				right: 0
+				background: rgba(0, 0, 0, 0.7)
+				filter: blur(10px)
+		&__bg
+			position: absolute
+			left: 0
+			top: 0
+			right: 0
+			bottom: 0
+			z-index: -1
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
+				object-position: top
+
+		&__hidden-text
+			position: absolute
+			top: -30%
+			left: 0
+			right: 0
+			width: 100%
+			height: 100%
+			background-color: rgba(0, 0, 0, 0.4)
+			transition: all 0.4s ease-in-out
+			opacity: 0
+			filter: blur(10px)
+			p
+				padding: 80px 23px
+				font-weight: normal
+				font-size: 14px
+				line-height: 17px
+			// &:hover
+			// 	top: 0
+			// 	opacity: 1
+
+		&__name
+			position: relative
+			display: flex
+			align-items: center
+			justify-content: flex-start
+			width: 100%
+
+		&__icon
+			width: 30px
+			margin: 0 30px 0 0
+		&__title
+			font-weight: bold
+			font-size: 24px
+			line-height: 29px
+		&__button
+			display: flex
+			align-items: center
+			justify-content: center
+			width: 100%
+			min-height: 57px
+			font-weight: 500
+			font-size: 20px
+			line-height: 24px
+			background: #FAE05E
+			border: none
+			text-decoration: none
+			color: #000
+			transition: all 0.3s ease
+			&:hover
+				background: darken(#FAE05E, 25%)
 // media ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 @import "media"
