--- a/css/main.css
+++ b/css/main.css
@@ -483,9 +483,6 @@ body {
   right: 0;
   bottom: 0;
   z-index: -1;
-}
-
-.services-item__bg img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -532,7 +529,7 @@ body {
 
 .services-item__icon {
   width: 30px;
-  margin: 0 30px 0 0;
+  margin: 0 20px 0 0;
 }
 
 .services-item__title {
@@ -566,6 +563,139 @@ body {
 
 .services-item__button:hover {
   background: #d2b007;
+}
+
+.price {
+  position: relative;
+  padding: 59px 0 66px 0;
+  background-image: url("../img/price-bg.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+}
+
+.price::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.83);
+  -webkit-backdrop-filter: blur(17px);
+          backdrop-filter: blur(17px);
+}
+
+.price-wrapper {
+  position: relative;
+}
+
+.price-title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  color: #fff;
+  text-align: center;
+}
+
+.price-item ul {
+  display: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.price-item ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  min-height: 53px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  color: #FFFFFF;
+  padding: 0 65px 0 46px;
+}
+
+.price-item ul li:nth-child(odd) {
+  background: #2F2F2F;
+}
+
+.price-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  width: 100%;
+  height: 90px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  color: #FAE05E;
+  cursor: pointer;
+  border-bottom: 2px solid #2F2F2F;
+}
+
+.price-name::before, .price-name::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 24px;
+  height: 2px;
+  background-color: #FAE05E;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.price-name::after {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  opacity: 1;
+}
+
+.price-table {
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 65px 0 46px;
+  height: 65px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #C4C4C4;
+}
+
+.price-item_visible ul {
+  display: block;
+}
+
+.price-name_active::after {
+  opacity: 0;
+}
+
+.price-table_visible {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @media (max-width: 1200px) {
