--- a/sass/main.sass
+++ b/sass/main.sass
@@ -420,8 +420,11 @@ body
 	&-list
 
 	&-item
-		ul
+		&__wrapper
 			display: none
+			// display: block
+		ul
+			// display: none
 			margin: 0
 			padding: 0
 			list-style: none
@@ -441,8 +444,7 @@ body
 				&:nth-child(odd)
 					background: #2F2F2F
 		&__table
-			display: none
-			// display: flex
+			display: flex
 			align-items: center
 			justify-content: space-between
 			padding: 0 65px 0 46px
@@ -480,9 +482,8 @@ body
 .price
 	&-item_visible
 		ul
-			// display: block
-		.price-item__table
-			// display: flex
+			display: block
+
 .price
 	&-name_active
 		&::after
