--- a/sass/main.sass
+++ b/sass/main.sass
@@ -117,7 +117,7 @@ body
 		&:hover
 			color: darken(#FAE05E, 30%)
 
-// Section main ///////////////////////////////////////////////////////////////////////////////////////////////////
+// main ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 .main
 	padding: 60px 0
@@ -177,7 +177,7 @@ body
 		font-size: 20px
 		line-height: 24px
 
-// Section video ///////////////////////////////////////////////////////////////////////////////////////////////////
+// video ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 .video
 
@@ -488,6 +488,145 @@ body
 	&-name_active
 		&::after
 			opacity: 0
+
+// clients ///////////////////////////////////////////////////////////////////////////////////////////////////
+
+.clients
+	padding: 107px 0 114px 0
+	&-wrapper
+		display: flex
+		align-items: center
+		justify-content: space-between
+	&-info
+		flex-shrink: 0
+		flex-grow: 1
+		&__button
+			display: inline-flex
+			align-items: center
+			justify-content: center
+			min-width: 222px
+			height: 45px
+			font-style: normal
+			font-weight: 500
+			font-size: 14px
+			line-height: 17px
+			text-decoration: none
+			background-color: #FAE05E
+			color: #000
+			transition: all 0.4s ease
+			&:hover
+				background-color: darken(#FAE05E, 25%)
+	&-title
+		font-style: normal
+		font-weight: bold
+		font-size: 40px
+		line-height: 49px
+		margin: 0 0 21px 0
+	&-subtitle
+		font-style: normal
+		font-weight: bold
+		font-size: 24px
+		line-height: 29px
+		margin: 0 0 30px 0
+
+	&-content
+		display: flex
+		align-items: flex-end
+	&-tabs
+		width: 20px
+		// height: 100%
+		margin: 0 5px 0 0
+		writing-mode: vertical-rl
+		transform: rotate(-180deg)
+		&-button
+			position: relative
+			font-style: normal
+			font-weight: normal
+			font-size: 14px
+			line-height: 17px
+			text-decoration: none
+			color: #000
+
+			&:not(:last-child)
+				margin: 0 0 10px 0
+				&::after
+					content: '/'
+					position: absolute
+					color: #000
+					left: 0
+					bottom: -10px
+			&_active
+				font-style: normal
+				font-weight: bold
+				font-size: 14px
+				line-height: 17px
+	&-swiper
+		position: relative
+	&-item
+		background: #E9E9E9
+		padding: 55px 67px 55px 82px
+		&__wrapper
+			display: flex
+			align-items: center
+			height: 100%
+			picture
+				margin: 0 25px 0 0
+
+		&__text
+			display: flex
+			flex-direction: column
+			justify-content: space-between
+			padding: 15px 0 0 0
+			height: 100%
+		&__title
+			font-style: normal
+			font-weight: 600
+			font-size: 16px
+			line-height: 20px
+			// margin: 0 0 30px 0
+		&__message
+			font-weight: normal
+			font-size: 16px
+			line-height: 24px
+		&__link
+			font-weight: normal
+			font-size: 16px
+			line-height: 20px
+			text-decoration-line: underline
+			color: #000
+
+.clients-button
+	&-prev, &-next
+		display: flex
+		align-items: center
+		justify-content: center
+		position: absolute
+		top: 0
+		width: 33px
+		height: 33px
+		background-color: #fff
+		cursor: pointer
+
+		z-index: 1
+		svg
+			transition: all 0.3s linear
+			fill: black
+		&:hover
+			svg
+				fill: darken(#FAE05E, 25%)
+
+	&-prev
+		right: 33px
+		transform: rotate(180deg)
+	&-next
+		right: 0
+.swiper
+	width: 652px
+	height: 369px
+
+	&-wrapper
+
+	&-slide
 
 // media ///////////////////////////////////////////////////////////////////////////////////////////////////
 
