--- a/css/main.css
+++ b/css/main.css
@@ -72,17 +72,39 @@ body {
 }
 
 .header {
+  position: fixed;
+  width: 100%;
   background-color: #E9E9E9;
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 .header-wrapper {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 18px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 10px 0;
+}
+
+.header-wrapper::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: -100%;
+  right: 0;
+  background-color: #f7f7f7;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  z-index: 0;
 }
 
 .header-logo {
@@ -94,12 +116,6 @@ body {
 .header-logo__link {
   display: inline-block;
   text-decoration: none;
-}
-
-.header-nav {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 .header-nav ul {
@@ -149,6 +165,16 @@ body {
   display: inline-block;
 }
 
+.header-social__link svg {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  fill: #000;
+}
+
+.header-social__link:hover svg {
+  fill: #b99b06;
+}
+
 .header-social__link:not(:last-child) {
   margin: 0 17px 0 0;
 }
@@ -156,11 +182,6 @@ body {
 .header-social__icon {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
-  fill: #000;
-}
-
-.header-social__icon:hover {
-  fill: #b99b06;
 }
 
 .header-contacts {
@@ -171,9 +192,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header-phone {
@@ -192,7 +213,7 @@ body {
 
 .header-city {
   font-weight: normal;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 15px;
   text-decoration: none;
   color: inherit;
@@ -204,8 +225,16 @@ body {
   color: #b99b06;
 }
 
+.header_scroll {
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 99;
+}
+
 .main {
-  padding: 60px 0;
+  padding: 144px 0;
   background-color: #E9E9E9;
 }
 
@@ -221,26 +250,9 @@ body {
           justify-content: space-between;
 }
 
-.main-info {
-  position: relative;
-}
-
-.main-info::before {
-  content: '';
-  position: absolute;
-  background-image: url("../img/main-puzzle.svg");
-  background-repeat: no-repeat;
-  width: 100px;
-  height: 100px;
-  left: 25px;
-  top: 100px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-
 .main-title {
   font-weight: bold;
-  font-size: 48px;
+  font-size: 44px;
   line-height: 59px;
   margin: 0 0 20px 0;
   position: relative;
@@ -248,22 +260,23 @@ body {
 
 .main-subtitle {
   font-weight: bold;
-  font-size: 30px;
+  font-size: 28px;
   line-height: 37px;
   margin: 0 0 85px 0;
   position: relative;
 }
 
 .main-button {
-  min-width: 257px;
-  height: 68px;
+  min-width: 229px;
+  height: 47px;
   padding: 0;
   font-weight: bold;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 16px;
+  line-height: 20px;
   background-color: #FAE05E;
   border: none;
   cursor: pointer;
+  text-transform: uppercase;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
@@ -293,21 +306,42 @@ body {
 }
 
 .main-description {
+  position: relative;
   font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 22px;
+  color: #000;
+}
+
+.main-description span {
+  position: relative;
+}
+
+.main-description::before {
+  content: '';
+  position: absolute;
+  left: -19px;
+  top: -18px;
+  width: 76px;
+  height: 76px;
+  background-image: url("../img/main-description-puzzle.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .video-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-column-gap: 120px;
+          column-gap: 120px;
 }
 
 .video-block {
@@ -381,7 +415,6 @@ body {
 
 .video-info {
   position: relative;
-  padding: 0 0 130px 0;
 }
 
 .video-info::before {
@@ -404,7 +437,7 @@ body {
   background-repeat: no-repeat;
   width: 125px;
   height: 125px;
-  left: -150px;
+  left: -140px;
   top: 60px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -448,7 +481,7 @@ body {
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 120px;
+  grid-column-gap: 170px;
   grid-row-gap: 40px;
 }
 
@@ -460,17 +493,22 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 294px;
-  min-height: 440px;
+  width: 263px;
+  min-height: 430px;
   color: #fff;
   cursor: pointer;
+  background-color: transparent;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
 }
 
-.services-item:hover .services-item__hidden-text {
-  top: 0;
-  opacity: 1;
-  -webkit-filter: blur(0);
-          filter: blur(0);
+.services-item:nth-child(3) .services-item__info {
+  padding: 23px 12px;
+}
+
+.services-item:nth-child(3) .services-item__icon {
+  width: 50px;
+  margin: 0 10px 0 0;
 }
 
 .services-item__info {
@@ -486,8 +524,14 @@ body {
           justify-content: flex-start;
   width: 100%;
   min-height: 383px;
-  padding: 20px 22px;
+  padding: 23px 16px 5px 21px;
   overflow: hidden;
+  -webkit-transition: -webkit-transform 0.8s;
+  transition: -webkit-transform 0.8s;
+  transition: transform 0.8s;
+  transition: transform 0.8s, -webkit-transform 0.8s;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
 }
 
 .services-item__info::before {
@@ -520,7 +564,7 @@ body {
 
 .services-item__hidden-text {
   position: absolute;
-  top: -30%;
+  top: 0;
   left: 0;
   right: 0;
   width: 100%;
@@ -534,7 +578,7 @@ body {
 }
 
 .services-item__hidden-text p {
-  padding: 80px 23px;
+  padding: 70px 16px 5px 21px;
   font-weight: normal;
   font-size: 14px;
   line-height: 17px;
@@ -548,20 +592,20 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 100%;
 }
 
 .services-item__icon {
   width: 30px;
-  margin: 0 20px 0 0;
+  margin: 0 10px 0 0;
 }
 
 .services-item__title {
   font-weight: bold;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 29px;
 }
 
@@ -577,11 +621,12 @@ body {
           justify-content: center;
   width: 100%;
   min-height: 57px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 24px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
   background: #FAE05E;
   border: none;
+  text-transform: uppercase;
   text-decoration: none;
   color: #000;
   -webkit-transition: all 0.3s ease;
@@ -590,6 +635,33 @@ body {
 
 .services-item__button:hover {
   background: #d2b007;
+}
+
+.services-item--front, .services-item--back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 23px 16px 5px 21px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.services-item--back {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.services-item__info_active {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.services-item__info_active .services-item__hidden-text {
+  opacity: 1;
+  -webkit-filter: blur(0);
+          filter: blur(0);
 }
 
 .price {
@@ -743,11 +815,7 @@ body {
 }
 
 .clients-info {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  padding: 0 25px 0 0;
 }
 
 .clients-info__button {
@@ -760,12 +828,14 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  min-width: 222px;
-  height: 45px;
-  font-style: normal;
-  font-weight: 500;
+  text-align: center;
+  min-width: 290px;
+  min-height: 47px;
+  padding: 15px 30px;
+  font-weight: bold;
   font-size: 14px;
   line-height: 17px;
+  text-transform: uppercase;
   text-decoration: none;
   background-color: #FAE05E;
   color: #000;
@@ -797,48 +867,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.clients-tabs {
-  width: 20px;
-  margin: 0 5px 0 0;
-  -webkit-writing-mode: vertical-rl;
-      -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-  -webkit-transform: rotate(-180deg);
-          transform: rotate(-180deg);
-}
-
-.clients-tabs-button {
-  position: relative;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 17px;
-  text-decoration: none;
-  color: #000;
-}
-
-.clients-tabs-button:not(:last-child) {
-  margin: 0 0 10px 0;
-}
-
-.clients-tabs-button:not(:last-child)::after {
-  content: '/';
-  position: absolute;
-  color: #000;
-  left: 0;
-  bottom: -10px;
-}
-
-.clients-tabs-button_active {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 17px;
 }
 
 .clients-swiper {
@@ -854,9 +882,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   height: 100%;
 }
 
@@ -872,11 +900,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 15px 0 0 0;
-  height: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  min-height: 100%;
 }
 
 .clients-item__title {
@@ -884,21 +911,13 @@ body {
   font-weight: 600;
   font-size: 16px;
   line-height: 20px;
+  margin: 0 0 30px 0;
 }
 
 .clients-item__message {
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
-}
-
-.clients-item__link {
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 20px;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-  color: #000;
 }
 
 .clients-button-prev, .clients-button-next {
@@ -942,7 +961,173 @@ body {
 
 .swiper {
   width: 652px;
-  height: 369px;
+}
+
+.form {
+  position: relative;
+}
+
+.form-bg {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.74);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+}
+
+.form-bg__layer {
+  position: absolute;
+  width: 63%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url("../img/form-bg.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.form-wrapper {
+  position: relative;
+  color: #fff;
+}
+
+.block-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 100px 0 120px 0;
+}
+
+.block-image {
+  margin: 0 60px 0 -100px;
+}
+
+.block__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.block__info form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.block-title {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  margin: 0 0 35px 0;
+}
+
+.block-title--modified {
+  color: #fae05e;
+}
+
+.block-item {
+  width: 100%;
+}
+
+.block-item__user, .block-item__phone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  border-bottom: 1px solid #FFFBFB;
+}
+
+.block-item__user img, .block-item__phone img {
+  width: 17px;
+  height: 17px;
+}
+
+.block-item__user {
+  margin: 0 0 20px 0;
+}
+
+.block-item__phone {
+  margin: 0 0 30px 0;
+}
+
+.block-input {
+  width: 100%;
+  padding: 5px 10px;
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  outline: none;
+}
+
+.block-input::-webkit-input-placeholder {
+  color: #949494;
+}
+
+.block-input:-ms-input-placeholder {
+  color: #949494;
+}
+
+.block-input::-ms-input-placeholder {
+  color: #949494;
+}
+
+.block-input::placeholder {
+  color: #949494;
+}
+
+.block-input img {
+  width: 16px;
+  height: 16px;
+}
+
+.block-button {
+  width: 208px;
+  min-height: 47px;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: none;
+  background-color: #fae05e;
+  padding: 15px 30px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.block-button:hover {
+  background-color: #d2b007;
 }
 
 @media (max-width: 1200px) {
